--- a/gallery.html
+++ b/gallery.html
@@ -591,13 +591,13 @@
         <br />
         <br />
 
-        <h3><b>Plateformer demo</b></h3><span class="right"><img src="media/examples/platformer.png" alt="tiled example" /></span>
+        <h3><b>Platformer demo</b></h3><span class="right"><img src="media/examples/platformer.png" alt="tiled example" /></span>
 
-        <p>a simple platformer to demonstrate the loading of tiled map using melonJS</p>
+        <p>A simple platformer to demonstrate the loading of a Tiled map using melonJS.</p>
 
-        <p>demo is available through the download package</p>
+        <p>Demo is available through the download package.</p>
 
-        <p>the whole level have been designed using only tiled, as shown on the below picture.</p><span class="right"><img src="media/examples/tiled_platformer.png" alt="tiled example" /></span>
+        <p>The whole level has been designed using only Tiled, as shown in the below picture.</p><span class="right"><img src="media/examples/tiled_platformer.png" alt="tiled example" /></span>
       </div>
     </div>
 
