updated copyright information

--- a/download.html
+++ b/download.html
@@ -50,15 +50,15 @@
       <div id="content">
         <!-- insert the page content here -->
         <h2>Terms of use</h2>
-        Copyright (C) 2011 - 2014, Olivier Biot, Jason Oster, Aaron McLeod<br><br>
+        Copyright (C) 2011 - 2015, Olivier Biot, Jason Oster, Aaron McLeod<br><br>
         <a href="http://melonjs.org">melonJS</a> is an open source HTML5 game engine released under the <a rel="license" href="https://github.com/melonjs/melonJS/blob/master/MIT-LICENSE">MIT</a> License.<br>
         <br>
         <h2>Additional Credits</h2>
         melonJS uses part of, or a derivated version of the following libraries :<br><br>
-        - <a href="https://github.com/daniellmb/MinPubSub">MinPubSub</a>: a micro publish/subscribe messaging framework available (MIT License)<br>
+        - <a href="https://github.com/daniellmb/MinPubSub">MinPubSub</a>: a micro publish/subscribe messaging framework (MIT License)<br>
         - <a href="https://github.com/sole/Tween.js">Tween JS</a>: a javaScript tweening engine for easy animations (MIT License)<br>
         - <a href="https://github.com/parasyte/jay-inheritance">Jay Inheritance</a>: a super fast prototypal inheritance microlib for the modern web (MIT License)<br>
-        - <a href="http://howlerjs.com">Howler</a>: a javascript audio library for the modern web  (MIT License)<br>
+        - <a href="http://howlerjs.com">Howler</a>: a javascript audio library for the modern web (MIT License)<br>
         - <a href="https://github.com/jriecken/sat-js">SAT.js</a>: a javascript Separating Axis Theorem implementation library by Jim Riecken (MIT License)<br>
         - <a href="https://github.com/timohausmann/quadtree-js/">quadtree-js</a>: a QuadTree implementation in JavaScript by Timo Hausmann (MIT License)<br>
         <h2>Links</h2>
@@ -75,7 +75,7 @@
     </div>
     <div id="content_footer"></div>
     <div id="footer">
-      Copyright &copy; melonJS 2011 - 2014
+      Copyright &copy; melonJS 2011 - 2015
     </div>
   </div>
 </body>
