reorganized all links on the right tool bar to better welcome the soon-to-be-ready space invaders tutorial !

--- a/index.html
+++ b/index.html
@@ -49,43 +49,35 @@
 		 <p>
 		   <img src="media/icons/HTML5_Badge_128.png"/><br>
 		 </p>
-		 <h3>Useful Links</h3>
-        <ul>
-			<li><a href="http://www.mapeditor.org/">Tiled</a></li>
-			<li><a href="http://www.scoreoid.net/">scoreoid</a></li>
-			<li><a href="http://www.marketjs.com/">marketJS</a></li>
-			<li><a href="http://clay.io/">clay.io</a></li>
-        </ul>
-		<h3>Support</h3>
-        <ul>
-		  <li><a href="http://melonjs.github.io/tutorial-platformer/">Step by Step Tutorial</a></li>
-          <li><a href="http://melonjs.github.io/docs/">Online Documentation</a></li>
-          <li><a href="https://github.com/melonjs/melonJS/wiki">Wiki Page</a></li>
-		  <li><a href="http://www.melonjs.org/forum">Developer Forum</a></li>
-		  <li><a href="https://gitter.im/melonjs/public">Developer Chat</a></li>
-		</ul>
+		<h3>Getting Started</h3>
+            <ul>
+              <li><a href="https://github.com/melonjs/boilerplate">Project Boilerplate</a></li>
+              <li><a href="http://melonjs.github.io/tutorial-platformer/">a Step by Step Platformer Tutorial</a></li>
+            </ul>
+         <h3>Support</h3>
+            <ul>
+              <li><a href="http://melonjs.github.io/docs/">Online Documentation</a></li>
+              <li><a href="https://github.com/melonjs/melonJS/wiki">Wiki Page</a></li>
+              <li><a href="http://www.melonjs.org/forum">Developer Forum</a></li>
+              <li><a href="https://gitter.im/melonjs/public">Developer Chat</a></li>
+            </ul>
       	<h3>Contributing</h3>
-        <ul>
-          <li><a href="http://github.com/melonjs/melonJS">Github Repository</a></li>
-		  <li><a href="https://github.com/melonjs/melonJS/issues">Issues Tracker</a></li>
-          <li><a href="mailto:contact@melonjs.org">Submit a patch</a></li>
-		  <li>
-			<center>
-			<table border="0">
-			<tr>
-			  <td style="background-color: white;">
-				<a class="FlattrButton" style="display:none;" href="http://www.melonjs.org"></a>
-				<noscript><a href="http://flattr.com/thing/824297/melonJS" target="_blank">
-				<img src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" /></a></noscript>
- 			  </td>
-			</tr>
-			</table>
-			</center>
-		   </li>
-		</ul>
-		<ul>
-			<center><img src="http://www.opensource.org/files/garland_logo.png"/></center>
-		</ul>
+            <ul>
+              <li><a href="http://github.com/melonjs/melonJS">Github Repository</a></li>
+              <li><a href="https://github.com/melonjs/melonJS/issues">Issues Tracker</a></li>
+              <li><a href="https://github.com/melonjs/melonJS/pulls">Submit a patch (Pull Request)</a></li>
+              <li><a href="http://melonjs.org/contact.html#donating">Donating</a></li>
+            </ul>
+            <h3>Useful Links</h3>
+            <ul>
+                <li><a href="http://www.mapeditor.org/">Tiled</a></li>
+                <li><a href="http://www.scoreoid.net/">scoreoid</a></li>
+                <li><a href="http://www.marketjs.com/">marketJS</a></li>
+                <li><a href="http://clay.io/">clay.io</a></li>
+            </ul>
+            <ul>
+                <center><img src="http://www.opensource.org/files/garland_logo.png"/></center>
+            </ul>
 		</div>
       <div id="content">
         <!-- insert the page content here -->
