--- a/contact.html
+++ b/contact.html
@@ -56,9 +56,9 @@
            <li>#melonjs on freenode.net (also available via <a href="http://webchat.freenode.net/?channels=melonjs">webchat</a>)</li>
         </ul>
         For other general, non technical inquiries about melonJS, you can contact us through the following address : <a href="mailto:contact@melonjs.org">contact@melonjs.org</a></p>
-		<h1>Donation</h1>
+		<h1 id="donating">Donation</h1>
 		  <p>
-		  melonJS is a open source project and free for everybody to use, and all development and support is mainly done during our sparetime. While we do not want anybody to donate in exchange for anything, potential donations by grateful users are however welcome and will be used to cover the cost of maintaining this website, related resources, and maybe some useful hardware for testing.
+		  melonJS is a open source project and free for everybody to use, and all development and support is mainly done during our sparetime. While we do not ask anyone to donate in exchange for anything, potential donations by grateful users are however welcome and will be used to cover the cost of maintaining this website, related resources, and maybe some useful hardware for testing.
 		  <center>
 			<table border="0">
 			<tr>
