download page updated with the 2.1.0 version

--- a/download.html
+++ b/download.html
@@ -63,11 +63,16 @@
         - <a href="https://github.com/timohausmann/quadtree-js/">quadtree-js</a>: a QuadTree implementation in JavaScript by Timo Hausmann (MIT License)<br>
         <h2>Links</h2>
     <table style="width:100%; border-spacing:0;">
-          <tr><th>Current Release: <a href="https://github.com/melonjs/melonJS/releases/tag/v2.0.2">2.0.2</a></th><th></th></tr>
-          <tr><td>Source</td><td><a href="https://github.com/melonjs/melonJS/tree/2.0.x">Github repository</a> ( <a href="https://github.com/melonjs/melonJS/zipball/2.0.x">zip</a> )</td></tr>
-          <tr><td>Build</td><td><a href="https://github.com/melonjs/melonJS/releases/download/v2.0.2/melonJS-2.0.2-min.js">Production</a> <small>(168KB, Minified)</small> <br><br> <a href="https://github.com/melonjs/melonJS/releases/download/v2.0.2/melonJS-2.0.2.js">Development</a> <small>(772KB, Uncompressed)</small></td></tr>
+          <tr><th>Current Release: <a href="https://github.com/melonjs/melonJS/releases/tag/2.1.0">2.1.0</a></th><th></th></tr>
+          <tr><td>Source</td><td><a href="https://github.com/melonjs/melonJS/tree/2.1.x">Github repository</a> ( <a href="https://github.com/melonjs/melonJS/zipball/2.1.x">zip</a> )</td></tr>
+          <tr><td>Build</td><td><a href="https://github.com/melonjs/melonJS/releases/download/2.1.0/melonJS-2.1.0-min.js">Production</a> <small>(168KB, Minified)</small> <br><br> <a href="https://github.com/melonjs/melonJS/releases/download/2.1.0/melonJS-2.1.0.js">Development</a> <small>(772KB, Uncompressed)</small></td></tr>
           <tr><td>Documentation</td><td><a href="http://melonjs.github.io/docs/">Online documentation</a> ( <a href="https://github.com/melonjs/docs/archive/gh-pages.zip">zip</a> )</td></tr>
-          <tr><td>Tutorial</td><td><a href="http://melonjs.github.io/tutorial-platformer/">A quick step by step game creation tutorial</a></td></tr>
+          <tr><td>Tutorial</td>
+            <td>
+                <a href="http://melonjs.github.io/tutorial-platformer/">A quick step by step platformer creation tutorial</a><br>
+                <a href="http://melonjs.github.io/tutorial-space-invaders/)/">A quick step by step space invaders creation tutorial</a>
+            </td>
+          </tr>
           <tr><td>Tools</td><td><a href="http://www.mapeditor.org/">Tiled Map Editor</a></td></tr>
         </table>
 
