--- a/download.html
+++ b/download.html
@@ -70,7 +70,7 @@
           <tr><td>Tutorial</td>
             <td>
                 <a href="http://melonjs.github.io/tutorial-platformer/">A quick step by step platformer creation tutorial</a><br>
-                <a href="http://melonjs.github.io/tutorial-space-invaders/)/">A quick step by step space invaders creation tutorial</a>
+                <a href="http://melonjs.github.io/tutorial-space-invaders/">A quick step by step space invaders creation tutorial</a>
             </td>
           </tr>
           <tr><td>Tools</td><td><a href="http://www.mapeditor.org/">Tiled Map Editor</a></td></tr>
