added a link to the space invaders tutorial on the home page

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 		<h3>Getting Started</h3>
             <ul>
               <li><a href="https://github.com/melonjs/boilerplate">Project Boilerplate</a></li>
-              <li><a href="http://melonjs.github.io/tutorial-platformer/">a Step by Step Platformer Tutorial</a></li>
+              <li><a href="http://melonjs.github.io/tutorial-platformer/">Platformer Tutorial</a></li>
+              <li><a href="http://melonjs.github.io/tutorial-space-invaders/">Space Invaders Tutorial</a></li>
             </ul>
          <h3>Support</h3>
             <ul>
