got tired by the old text !

--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
       <div id="content">
         <!-- insert the page content here -->
 		<h2>Fresh & lightweight</h2>
-        <p>melonJS is the result of our enthusiasm and past experiments with Javascript, and came from the feeling that no simple,
-		  free and standalone library was available to develop games. And although still a work in progress, melonJS already allows to easily create some nice games (see the <a href="gallery.html">Gallery</a> page)</p>
+        <p>melonJS is a lightweight but yet powerful HTML5 framework designed from the ground up to provide a true plugin-free 
+           'write-once, run-everywhere' gaming oriented library. melonJS is an open-source project and supported by a community of enthusiasts.
+            See our <a href="gallery.html">Gallery</a> for a few examples of games powered by melonJS.</p>
 		  <h2>Powerful level design through Tiled</h2>
 		  <p>melonJS integrates the popular Tiled map format, allowing to easily design levels using the <a href="http://www.mapeditor.org/">Tiled map editor</a>, and to focus on the game features itself.</p>
 			<div class="slider-wrapper theme-default">
