--- a/index.html
+++ b/index.html
@@ -102,49 +102,50 @@
           </div>
         </div>
         <h2>Free and open-source</h2>
-        melonJS is an open-source HTML5 based community game engine, released under the MIT license, that you can <a href="https://github.com/melonjs/melonJS">join</a>, but that you can also modify or extend in any way to fit your needs.
+        <p>
+          melonJS is an open-source HTML5 based community game engine, released under the MIT license. You can <a href="https://github.com/melonjs/melonJS">join</a> the project, or modify or extend the framework in any way to fit your needs.
+        </p>
         <h2>Feature list :</h2>
         <ul>
           <li>A fresh and lightweight 2D sprite-based engine</li>
-          <li>Standalone library (does not rely on anything else, except a HTML5 capable browser)</li>
-          <li>Compatible with all major browsers (Chrome, Safari, Firefox, Opera, IE) and mobile devices</li>
-          <li>Multi-channel HTML5 audio support and Web Audio on supported devices</li>
-          <li>a lightweight physic implementation to ensure low cpu requirements</li>
-          <li>Polygon (SAT) based collision algorithm for accurate detection and response</li>
-          <li>Fast broad-phase collision detection using spatial partitioning</li>
-          <li>advanced math API for Vector and Matrix</li>
-          <li>Tween effects</li>
-          <li>Transition effects</li>
-          <li>A basic set of Object Entities (to be extended)</li>
-          <li>Object Pooling</li>
-          <li>Basic Particle System</li>
-          <li>Basic animation management</li>
-          <li>Standard spritesheet and Packed Textures (Texture Packer) support</li>
-          <li>A state manager (to easily manage loading, menu, options or in-game screen state and switch)</li>
-          <li>Tiled map format version +0.9.x integration for easy level design :
+          <li>Standalone library (no additional dependencies)</li>
+          <li>Modern HTML5 features; WebAudio &amp; WebGL on supported devices</li>
+          <li>High DPI &amp; auto scaling video modes</li>
+          <li>Tween &amp; Transition effects</li>
+          <li>Compatible with all major browsers &amp; mobile devices:
             <ul>
-              <li>Uncompressed Plain, Base64, CSV and JSON encoded XML tilemap loading</li>
-              <li>Orthogonal, Isometric and Perspective tilemap support</li>
-              <li>Multiple layers (multiple background/Foreground, collision and Image layers)</li>
-              <li>Multiple Tileset support</li>
-              <li>Tileset Transparency settings</li>
-              <li>Layers Alpha settings</li>
-              <li>Rectangle, Ellipse, Polygon and Polyline objects support</li>
-              <li>Tiled Object</li>
-              <li>Flipped &amp; rotated Tiles</li>
-              <li>Dynamic Layer and Object/Group ordering</li>
-              <li>Dynamic Entity loading</li>
-              <li>Shape based Tile collision support</li>
+              <li>Chrome, Safari, Firefox, Opera, IE</li>
+              <li>Android, iOS, CocoonJS</li>
+            </ul>
+          </li>
+          <li>A lightweight physics implementation to ensure low cpu requirements:
+            <ul>
+              <li>Polygon (SAT) based collision algorithm for accurate detection and response</li>
+              <li>Fast broad-phase collision detection using spatial partitioning</li>
+              <li>Advanced math API for Vector and Matrix</li>
+            </ul>
+          </li>
+          <li>A basic set of extensible Object Entities:
+            <ul>
+              <li>Object Pooling</li>
+              <li>Basic Particle System</li>
+              <li>Basic animation management</li>
+              <li>Standard spritesheet and Packed Textures (Texture Packer) support</li>
+              <li>Some basic GUI elements</li>
+            </ul>
+          </li>
+          <li>Tiled map format version +0.9.x integration for easy level design:
+            <ul>
+              <li>Orthogonal, Isometric, Hexagonal, and Perspective tilemap support</li>
+              <li>Multiple layers with parallax scrolling</li>
+              <li>Shape-based collision layers (Rectangle, Ellipse, Polygon, and Polyline)</li>
+              <li>JSON and XML formats</li>
             </ul>
           </li>
           <li>System and Bitmap fonts</li>
-          <li>Mouse and Touch device support (with mouse emulation)</li>
-          <li>Device motion &amp; accelerometer support</li>
-          <li>High DPI &amp; auto scaling</li>
-          <li>Built-in support for CocoonJS</li>
-          <li>Asynchronous messaging support (minPubSub)</li>
-          <li>some basic GUI elements</li>
-          <li>a customizable loader, etc. . .</li>
+          <li>A state manager and customizable loader</li>
+          <li>Mouse, Touch, and Pointer device support</li>
+          <li>Device motion, orientation, and accelerometer support</li>
         </ul>
         <span class="right"><img src="media/icons/browser_icons.png" alt="browser icons example" /></span>
         <h2>Browser Compatibility</h2>
