--- a/download.html
+++ b/download.html
@@ -55,22 +55,25 @@
         <br>
         <h2>Additional Credits</h2>
         melonJS uses part of, or a derivated version of the following libraries :<br><br>
-        - <a href="https://github.com/daniellmb/MinPubSub">MinPubSub</a>: a micro publish/subscribe messaging framework (MIT License)<br>
-        - <a href="https://github.com/sole/Tween.js">Tween JS</a>: a javaScript tweening engine for easy animations (MIT License)<br>
-        - <a href="https://github.com/parasyte/jay-inheritance">Jay Inheritance</a>: a super fast prototypal inheritance microlib for the modern web (MIT License)<br>
-        - <a href="http://howlerjs.com">Howler</a>: a javascript audio library for the modern web (MIT License)<br>
-        - <a href="https://github.com/jriecken/sat-js">SAT.js</a>: a javascript Separating Axis Theorem implementation library by Jim Riecken (MIT License)<br>
-        - <a href="https://github.com/timohausmann/quadtree-js/">quadtree-js</a>: a QuadTree implementation in JavaScript by Timo Hausmann (MIT License)<br>
+        <ul>
+          <li><a href="https://github.com/daniellmb/MinPubSub">MinPubSub</a>: a micro publish/subscribe messaging framework (MIT License)</li>
+          <li><a href="https://github.com/sole/Tween.js">Tween JS</a>: a javaScript tweening engine for easy animations (MIT License)</li>
+          <li><a href="https://github.com/parasyte/jay-extend">Jay-Extend</a>: a super fast prototypal inheritance microlib for the modern web (MIT License)</li>
+          <li><a href="http://howlerjs.com">Howler</a>: a javascript audio library for the modern web (MIT License)</li>
+          <li><a href="https://github.com/jriecken/sat-js">SAT.js</a>: a javascript Separating Axis Theorem implementation library by Jim Riecken (MIT License)</li>
+          <li><a href="https://github.com/timohausmann/quadtree-js/">quadtree-js</a>: a QuadTree implementation in JavaScript by Timo Hausmann (MIT License)</li>
+          <li><a href="https://github.com/WebReflection/es6-collections">ES6 Collections</a>: Map, WeakMap, and Set fast/simple shim by Andrea Giammarchi (MIT License)</li>
+        </ul>
         <h2>Links</h2>
-    <table style="width:100%; border-spacing:0;">
+        <table style="width:100%; border-spacing:0;">
           <tr><th>Current Release: <a href="https://github.com/melonjs/melonJS/releases/tag/2.1.2">2.1.2</a></th><th></th></tr>
           <tr><td>Source</td><td><a href="https://github.com/melonjs/melonJS/tree/2.1.x">Github repository</a> ( <a href="https://github.com/melonjs/melonJS/zipball/2.1.x">zip</a> )</td></tr>
           <tr><td>Build</td><td><a href="https://github.com/melonjs/melonJS/releases/download/2.1.2/melonJS-2.1.2-min.js">Production</a> <small>(185KB, Minified)</small> <br><br> <a href="https://github.com/melonjs/melonJS/releases/download/2.1.2/melonJS-2.1.2.js">Development</a> <small>(830KB, Uncompressed)</small></td></tr>
           <tr><td>Documentation</td><td><a href="http://melonjs.github.io/docs/">Online documentation</a> ( <a href="https://github.com/melonjs/docs/archive/gh-pages.zip">zip</a> )</td></tr>
           <tr><td>Tutorial</td>
             <td>
-                <a href="http://melonjs.github.io/tutorial-platformer/">A quick step by step platformer creation tutorial</a><br>
-                <a href="http://melonjs.github.io/tutorial-space-invaders/">A quick step by step space invaders creation tutorial</a>
+              <a href="http://melonjs.github.io/tutorial-platformer/">A quick step by step platformer creation tutorial</a><br>
+              <a href="http://melonjs.github.io/tutorial-space-invaders/">A quick step by step space invaders creation tutorial</a>
             </td>
           </tr>
           <tr><td>Tools</td><td><a href="http://www.mapeditor.org/">Tiled Map Editor</a></td></tr>
