Fix whitespace on contact page

--- a/contact.html
+++ b/contact.html
@@ -8,15 +8,15 @@
   <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
   <link rel="stylesheet" type="text/css" href="style/style.css" title="style" />
   <script type="text/javascript">
-	/* <![CDATA[ */
-		(function() {
-			var s = document.createElement('script'), t = document.getElementsByTagName('script')[0];
-			s.type = 'text/javascript';
-			s.async = true;
-			s.src = 'http://api.flattr.com/js/0.6/load.js?mode=auto';
-			t.parentNode.insertBefore(s, t);
-		})();
-	/* ]]> */
+  /* <![CDATA[ */
+    (function() {
+      var s = document.createElement('script'), t = document.getElementsByTagName('script')[0];
+      s.type = 'text/javascript';
+      s.async = true;
+      s.src = 'http://api.flattr.com/js/0.6/load.js?mode=auto';
+      t.parentNode.insertBefore(s, t);
+    })();
+  /* ]]> */
  </script>
 </head>
 
@@ -48,31 +48,33 @@
       <div id="content">
         <!-- insert the page content here -->
         <h1>Contact Us</h1>
-		<p>
-        If you need technical support, you can contact us through the following channels :
-        <ul>
-           <li>melonJS <a href="http://www.melonjs.org/forum">developer forum</a></li>
-           <li>gitter <a href="https://gitter.im/melonjs/public">web chat</a></li>
-           <li>#melonjs on freenode.net (also available via <a href="http://webchat.freenode.net/?channels=melonjs">webchat</a>)</li>
-        </ul>
-        For other general, non technical inquiries about melonJS, you can contact us through the following address : <a href="mailto:contact@melonjs.org">contact@melonjs.org</a></p>
-		<h1 id="donating">Donation</h1>
-		  <p>
-		  melonJS is a open source project and free for everybody to use, and all development and support is mainly done during our sparetime. While we do not ask anyone to donate in exchange for anything, potential donations by grateful users are however welcome and will be used to cover the cost of maintaining this website, related resources, and maybe some useful hardware for testing.
-		  <center>
-			<table border="0">
-			<tr>
-			  <td style="background-color: white;">
-				<a class="FlattrButton" style="display:none;" href="http://www.melonjs.org"></a>
-				<noscript><a href="http://flattr.com/thing/824297/melonJS" target="_blank">
-				<img src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" /></a></noscript>
- 			  </td>
-			</tr>
-			</table>
-			</center>
-		  Thank you !
-		  <p></p>
-       </div>
+        <p>
+          If you need technical support, you can contact us through the following channels :
+          <ul>
+             <li>melonJS <a href="http://www.melonjs.org/forum">developer forum</a></li>
+             <li>gitter <a href="https://gitter.im/melonjs/public">web chat</a></li>
+             <li>#melonjs on freenode.net (also available via <a href="http://webchat.freenode.net/?channels=melonjs">webchat</a>)</li>
+          </ul>
+          For other general, non technical inquiries about melonJS, you can contact us through the following address : <a href="mailto:contact@melonjs.org">contact@melonjs.org</a></p>
+          <h1 id="donating">Donation</h1>
+        <p>
+        melonJS is a open source project and free for everybody to use, and all development and support is mainly done during our sparetime. While we do not ask anyone to donate in exchange for anything, potential donations by grateful users are however welcome and will be used to cover the cost of maintaining this website, related resources, and maybe some useful hardware for testing.
+        <center>
+          <table border="0">
+            <tr>
+              <td style="background-color: white;">
+                <a class="FlattrButton" style="display:none;" href="http://www.melonjs.org"></a>
+                <noscript>
+                  <a href="http://flattr.com/thing/824297/melonJS" target="_blank"><img src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" /></a>
+                </noscript>
+              </td>
+            </tr>
+          </table>
+        </center>
+        <p>
+          Thank you !
+        </p>
+      </div>
     </div>
    <div id="content_footer"></div>
     <div id="footer">
