update the main page to better highlight the 3rd party tools we support

--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@
           <li><a href="http://www.melonjs.org/forum">Developer Forum</a></li>
           <li><a href="https://gitter.im/melonjs/public">Developer Chat</a></li>
         </ul>
+        <h3>Editors &amp; Tools</h3>
+        <ul>
+          <li><a href="http://www.mapeditor.org/">Tiled</a></li>
+          <li><a href="https://www.codeandweb.com/texturepacker">TexturePacker</a></li>
+          <li><a href="http://renderhjs.net/shoebox/">ShoeBox</a></li>
+          <li><a href="https://www.codeandweb.com/physicseditor">PhysicEditor</a></li>
+          <li><a href="http://www.aurelienribon.com/blog/projects/physics-body-editor/">Physic Body Editor</a></li>
+        </ul>
         <h3>Contributing</h3>
         <ul>
           <li><a href="http://github.com/melonjs/melonJS">Github Repository</a></li>
@@ -70,8 +78,6 @@
         </ul>
         <h3>Useful Links</h3>
         <ul>
-          <li><a href="http://www.mapeditor.org/">Tiled</a></li>
-          <li><a href="http://www.scoreoid.net/">scoreoid</a></li>
           <li><a href="http://www.marketjs.com/">marketJS</a></li>
           <li><a href="http://clay.io/">clay.io</a></li>
         </ul>
@@ -123,6 +129,7 @@
               <li>Polygon (SAT) based collision algorithm for accurate detection and response</li>
               <li>Fast broad-phase collision detection using spatial partitioning</li>
               <li>Advanced math API for Vector and Matrix</li>
+              <li>3rd party tools support for physic body definition (PhysicEditor, Physic Body Editor)</li>
             </ul>
           </li>
           <li>A basic set of extensible Object Entities:
@@ -130,7 +137,7 @@
               <li>Object Pooling</li>
               <li>Basic Particle System</li>
               <li>Basic animation management</li>
-              <li>Standard spritesheet and Packed Textures (Texture Packer) support</li>
+              <li>Standard spritesheet and Packed Textures (TexturePacker, Shoebox) support</li>
               <li>Some basic GUI elements</li>
             </ul>
           </li>
