update link to point to the main melonJS gh-page

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </ul>
         <h3>Support</h3>
         <ul>
-          <li><a href="http://melonjs.github.io/docs/">Online Documentation</a></li>
+          <li><a href="http://melonjs.github.io/melonJS/docs/">Online Documentation</a></li>
           <li><a href="https://github.com/melonjs/melonJS/wiki">Wiki Page</a></li>
           <li><a href="http://www.melonjs.org/forum">Developer Forum</a></li>
           <li><a href="https://gitter.im/melonjs/public">Developer Chat</a></li>
