--- a/download.html
+++ b/download.html
@@ -50,7 +50,7 @@
       <div id="content">
         <!-- insert the page content here -->
         <h2>Terms of use</h2>
-        Copyright (C) 2011 - 2015, Olivier Biot, Jason Oster, Aaron McLeod<br><br>
+        Copyright (C) 2011 - 2016, Olivier Biot, Jason Oster, Aaron McLeod<br><br>
         <a href="http://melonjs.org">melonJS</a> is an open source HTML5 game engine released under the <a rel="license" href="https://github.com/melonjs/melonJS/blob/master/MIT-LICENSE">MIT</a> License.<br>
         <br>
         <h2>Additional Credits</h2>
@@ -66,10 +66,10 @@
         </ul>
         <h2>Links</h2>
         <table style="width:100%; border-spacing:0;">
-          <tr><th>Current Release: <a href="https://github.com/melonjs/melonJS/releases/tag/2.1.3">2.1.3</a></th><th></th></tr>
-          <tr><td>Source</td><td><a href="https://github.com/melonjs/melonJS/tree/2.1.x">Github repository</a> ( <a href="https://github.com/melonjs/melonJS/zipball/2.1.x">zip</a> )</td></tr>
-          <tr><td>Build</td><td><a href="https://github.com/melonjs/melonJS/releases/download/2.1.3/melonJS-2.1.3-min.js">Production</a> <small>(185KB, Minified)</small> <br><br> <a href="https://github.com/melonjs/melonJS/releases/download/2.1.3/melonJS-2.1.3.js">Development</a> <small>(811KB, Uncompressed)</small></td></tr>
-          <tr><td>Documentation</td><td><a href="http://melonjs.github.io/docs/">Online documentation</a> ( <a href="https://github.com/melonjs/docs/archive/gh-pages.zip">zip</a> )</td></tr>
+          <tr><th>Current Release: <a href="https://github.com/melonjs/melonJS/releases/latest">3.0.0</a></th><th></th></tr>
+          <tr><td>Source</td><td><a href="https://github.com/melonjs/melonJS/tree/3.0.x">Github repository</a> ( <a href="https://github.com/melonjs/melonJS/zipball/2.1.x">zip</a> )</td></tr>
+          <tr><td>Build</td><td><a href="https://github.com/melonjs/melonJS/releases/download/3.0.0/melonJs-min.js">Production</a> <small>(205KB, Minified)</small> <br><br> <a href="https://github.com/melonjs/melonJS/releases/download/3.0.0/melonJS.js">Development</a> <small>(859KB, Uncompressed)</small></td></tr>
+          <tr><td>Documentation</td><td><a href="http://melonjs.github.io/melonJS/docs/">Online documentation</a> ( <a href="https://github.com/melonjs/melonJS/archive/gh-pages.zip">zip</a> )</td></tr>
           <tr><td>Tutorial</td>
             <td>
               <a href="http://melonjs.github.io/tutorial-platformer/">A quick step by step platformer creation tutorial</a><br>
@@ -83,7 +83,7 @@
     </div>
     <div id="content_footer"></div>
     <div id="footer">
-      Copyright &copy; melonJS 2011 - 2015
+      Copyright &copy; melonJS 2011 - 2016
     </div>
   </div>
 </body>
