--- a/download.html
+++ b/download.html
@@ -66,9 +66,9 @@
         </ul>
         <h2>Links</h2>
         <table style="width:100%; border-spacing:0;">
-          <tr><th>Current Release: <a href="https://github.com/melonjs/melonJS/releases/latest">3.0.1</a></th><th></th></tr>
-          <tr><td>Source</td><td><a href="https://github.com/melonjs/melonJS/tree/3.0.x">Github repository</a> ( <a href="https://github.com/melonjs/melonJS/zipball/2.1.x">zip</a> )</td></tr>
-          <tr><td>Build</td><td><a href="https://github.com/melonjs/melonJS/releases/download/3.0.1/melonJs-min.js">Production</a> <small>(206KB, Minified)</small> <br><br> <a href="https://github.com/melonjs/melonJS/releases/download/3.0.1/melonJS.js">Development</a> <small>(897KB, Uncompressed)</small></td></tr>
+          <tr><th>Current Release: <a href="https://github.com/melonjs/melonJS/releases/latest">3.1.0</a></th><th></th></tr>
+          <tr><td>Source</td><td><a href="https://github.com/melonjs/melonJS/tree/3.1.0">Github repository</a> ( <a href="https://github.com/melonjs/melonJS/zipball/3.1.0">zip</a> )</td></tr>
+          <tr><td>Build</td><td><a href="https://github.com/melonjs/melonJS/releases/download/3.1.0/melonJs-min.js">Production</a> <small>(217KB, Minified)</small> <br><br> <a href="https://github.com/melonjs/melonJS/releases/download/3.1.0/melonJS.js">Development</a> <small>(950KB, Uncompressed)</small></td></tr>
           <tr><td>Documentation</td><td><a href="http://melonjs.github.io/melonJS/docs/">Online documentation</a> ( <a href="https://github.com/melonjs/melonJS/archive/gh-pages.zip">zip</a> )</td></tr>
           <tr><td>Tutorial</td>
             <td>
