fix the getting-started link

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <li class="active"><a href="index.html#top">Home</a></li>
           <li><a href="https://github.com/melonjs/melonJS/releases">Download</a></li>
           <li><a href="http://melonjs.github.io/docs/">API</a></li>
-          <li><a href="index.html##getting-started">Getting Started</a></li>
+          <li><a href="index.html#getting-started">Getting Started</a></li>
           <li><a href="http://blog.melonjs.org/">Blog</a></li>
           <li><a href="https://github.com/melonjs/melonJS/wiki/made-with-melonJS">Gallery</a></li>
           <li><a href="https://groups.google.com/forum/#!forum/melonjs">Forum</a></li>
