Fix the link to the gallery

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <p>
           melonJS is a lightweight yet powerful HTML5 framework designed from the ground up to provide a true plugin-free
           'write-once, run-everywhere' gaming platform. melonJS is an open-source project and supported by a community of enthusiasts.
-          See our <a href="gallery.html">Gallery</a> for a few examples of games powered by melonJS.
+          See our <a href="https://github.com/melonjs/melonJS/wiki/made-with-melonJS">Gallery</a> for a few examples of games powered by melonJS.
         </p>
         <h2>Getting Started<a id="getting-started" class="anchor"></a></h2>
         <hr>
