added radmars in the developer higlight, and did some further clean-up (removed unused icons)

--- a/index.html
+++ b/index.html
@@ -121,8 +121,10 @@
         <div class="row">
           <div class="col-md-4">
             <h2>Fast</h2>
+            <img class="right vspacer-20" height=128 align="top" src="media/icons/HTML5_Badge.png" alt="HTML5">
             <blockquote>
               <p>Built with future technology.</p>
+
               <ul>
                 <li>WebGL
                 <li>WebAudio
@@ -166,9 +168,17 @@
     <div class="band">
       <div class="container">
         <h2>Developer Spotlight</h2>
-        <hr>
-        <p><a href="http://masterspygame.com/">Master Spy</a> by Turbogun</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/WpNllTmnXFQ" frameborder="0" allowfullscreen></iframe>
+        <table style="width:100%">
+          <tr>
+              <th><a href="http://masterspygame.com/">Master Spy</a> by Turbogun</th>
+              <th><a href="http://radmars.com/">Radmars Team</a> - Ludum Dare &amp GameJam</th>
+          </tr>
+          <tr valign="top">
+              <th><iframe width="500" height="315" src="https://www.youtube.com/embed/WpNllTmnXFQ" frameborder="0" allowfullscreen></iframe></th>
+              <th><img width="500" height="315" frameborder="0" src="media/radmars_intro.gif" alt="radmars intro"></th>
+          </tr>
+        </table>
+
       </div>
     </div>
 
