new forum link update

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <li><a href="index.html#getting-started">Getting Started</a></li>
           <li><a href="http://blog.melonjs.org/">Blog</a></li>
           <li><a href="https://github.com/melonjs/melonJS/wiki/made-with-melonJS">Gallery</a></li>
-          <li><a href="https://groups.google.com/forum/#!forum/melonjs">Forum</a></li>
+          <li><a href="http://www.html5gamedevs.com/forum/32-melonjs/">Forum</a></li>
           <li><a href="https://github.com/melonjs/melonJS#questions-need-help-">Contact Us</a></li>
           <li class="mobile-forkme"><a href="https://github.com/melonjs/melonjs">Github</a></li>
         </ul>
