--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
             <li><a href="https://github.com/melonjs/melonJS/wiki/shoebox">Shoebox</a>
             <li><a href="https://github.com/melonjs/melonJS/wiki/How-to-load-PhysicEditor-Shapes-into-your-project">PhysicEditor</a>
             <li><a href="https://github.com/melonjs/melonJS/wiki/How-to-generate-and-use-Bitmap-Font-in-melonJS">BitmapFont Generator</a>
-            <li><a href="https://github.com/melonjs/melonJS/wiki/Making-your-game-into-a-mobile-hybrid-app#cordova">Cordova/PhoneGag</a>
+            <li><a href="https://github.com/melonjs/melonJS/wiki/Making-your-game-into-a-mobile-hybrid-app#cordova">Cordova/PhoneGap</a>
             <li><a href="https://github.com/melonjs/melonJS/wiki/Making-your-game-into-a-mobile-hybrid-app#cocoon-js">CocoonJS</a>
             <li><a href="https://github.com/melonjs/melonJS/wiki/How-to-build-your-game-for-tvOS-(or-iOS)-using-Ejecta">Ejecta</a>
         </ul>
