--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
           </div>
 
           <div class="col-md-6">
-            <img class="right vspacer-20" src="media/icons/browser_icons.png" alt="browser icons example">
+            <img class="right vspacer-20" width="150" src="media/icons/browser_icons.png" alt="browser icons example">
             <h2>Compatibility</h2>
             <hr>
             <p>See below about melonJS and compatibility with the various existing browsers.</p>
