--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <h2>Features</h2>
+            <h2>Features<a id="features" class="anchor"></a></h2>
             <hr>
             <ul>
               <li>A fresh and lightweight 2D sprite-based engine
@@ -230,7 +230,7 @@
 
           <div class="col-md-6">
             <img class="right vspacer-20" width="150" src="media/icons/browser_icons.png" alt="browser icons example">
-            <h2>Compatibility</h2>
+            <h2>Compatibility<a id="compatibility" class="anchor"></a></h2>
             <hr>
             <p>See below about melonJS and compatibility with the various existing browsers.</p>
             <table class="table">
