update to the browser minimum version (ES5 only)

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <img class="right vspacer-20" width="150" src="media/icons/browser_icons.png" alt="browser icons example">
             <h2>Compatibility<a id="compatibility" class="anchor"></a></h2>
             <hr>
-            <p>See below about melonJS and compatibility with the various existing browsers.</p>
+            <p>melonJS works with any full ES5 compatible browsers</p>
             <table class="table">
               <thead>
                 <tr><th>Browser</th><th>Version</th><th>Status</th></tr>
@@ -242,27 +242,27 @@
                   <th>
                     <a href="http://www.google.com/chrome/">Chrome</a>
                   </th>
-                  <td>12+</td>
+                  <td>55+</td>
                   <td><span class="glyphicon glyphicon-check text-success"></span></td>
                 </tr>
                 <tr>
                   <th><a href="http://www.apple.com/safari/">Safari</a></th>
-                  <td>5.0+</td>
+                  <td>10+</td>
                   <td><span class="glyphicon glyphicon-check text-success"></span></td>
                 </tr>
                 <tr>
                   <th><a href="http://www.mozilla.com/">Firefox</a></th>
-                  <td>4+</td>
+                  <td>50+</td>
                   <td><span class="glyphicon glyphicon-check text-success"></span></td>
                 </tr>
                 <tr>
                   <th><a href="http://www.opera.com/">Opera</a></th>
-                  <td>11.00+</td>
+                  <td>42+</td>
                   <td><span class="glyphicon glyphicon-check text-success"></span></td>
                 </tr>
                 <tr>
                   <th><a href="http://windows.microsoft.com/en-US/internet-explorer/downloads/ie">IE</a></th>
-                  <td>9+</td>
+                  <td>11+</td>
                   <td><span class="glyphicon glyphicon-check text-success"></span></td>
                 </tr>
                 <tr>
@@ -271,12 +271,12 @@
                 </tr>
                 <tr>
                   <th><a href="https://www.google.com/chrome/browser/mobile/">Chrome for Mobile</a></th>
-                  <td>18+</td>
+                  <td>55+</td>
                   <td><span class="glyphicon glyphicon-check text-success"></span></td>
                 </tr>
                 <tr>
                   <th><a href="http://www.apple.com/safari/">iOS Safari</a></th>
-                  <td>6+</td>
+                  <td>9.3+</td>
                   <td><span class="glyphicon glyphicon-check text-success"></span></td>
                 </tr>
               </tbody>
