--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@
   <script type="text/javascript" src="http://melonjs.github.io/melonJS/examples/platformer/js/entities/enemies.js"></script>
   <script type="text/javascript" src="http://melonjs.github.io/melonJS/examples/platformer/js/entities/player.js"></script>
   <script type="text/javascript" src="http://melonjs.github.io/melonJS/examples/platformer/js/entities/HUD.js"></script>
+  <script type="text/javascript" src="http://melonjs.github.io/melonJS/examples/platformer/js/entities/controls.js"></script>
   <script type="text/javascript" src="http://melonjs.github.io/melonJS/examples/platformer/js/screens/play.js"></script>
   <script type="text/javascript">
     window.onReady(function onReady() {
