--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
   <script type="text/javascript" src="http://melonjs.github.io/melonJS/examples/platformer/js/entities/controls.js"></script>
   <script type="text/javascript" src="http://melonjs.github.io/melonJS/examples/platformer/js/screens/play.js"></script>
   <script type="text/javascript">
-    window.onReady(function onReady() {
+    me.device.onReady(function onReady() {
       // enable cross-origin image loading
       me.loader.crossOrigin = "anonymous"
       // configure the baseURL for the loader
